[gd_scene load_steps=4 format=3 uid="uid://gxhrf1cwptdn"]

[ext_resource type="Script" path="res://rooms/roomCards/Card.gd" id="1_vltva"]
[ext_resource type="Texture2D" uid="uid://uhtkfdniys7p" path="res://assets/Cards/Card.png" id="2_bh3id"]
[ext_resource type="Texture2D" uid="uid://bv0egxnftxr8c" path="res://assets/floors/combat_room.png" id="4_0x3m7"]

[node name="Card" type="Node2D"]
texture_filter = 1
script = ExtResource("1_vltva")

[node name="CardFrame" type="Sprite2D" parent="."]
texture = ExtResource("2_bh3id")

[node name="CardName" type="Label" parent="CardFrame"]
texture_filter = 1
offset_left = -64.0
offset_top = -96.0
offset_right = 64.0
offset_bottom = -74.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 14
text = "Hello There"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="CardImage" type="Sprite2D" parent="CardFrame"]
texture_filter = 1
position = Vector2(3, -37)
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_0x3m7")

[node name="CardText" type="RichTextLabel" parent="CardFrame"]
texture_filter = 1
offset_left = -56.0
offset_top = 8.0
offset_right = 59.0
offset_bottom = 93.0
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 10

[node name="Card" type="Panel" parent="."]
self_modulate = Color(1, 1, 1, 0)
texture_filter = 1
offset_left = -72.0
offset_top = -106.0
offset_right = 72.0
offset_bottom = 104.0
mouse_filter = 1
metadata/_edit_lock_ = true

[connection signal="gui_input" from="Card" to="." method="_on_card_gui_input"]
[connection signal="mouse_entered" from="Card" to="." method="_on_card_mouse_entered"]
[connection signal="mouse_exited" from="Card" to="." method="_on_card_mouse_exited"]
